--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/siddique-shahida/sit725-2021-t3-prac2/issues"
   },
-  "homepage": "https://github.com/siddique-shahida/sit725-2021-t3-prac2#readme"
+  "homepage": "https://github.com/siddique-shahida/sit725-2021-t3-prac2#readme",
+  "dependencies": {
+    "express": "^4.17.1"
+  }
 }
